[project]
name = "timesfm"
version = "0.1.0"
description = ""
authors = [
    {name = "alvdef",email = "alvaro.defrancisco03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
package-mode = false

[project.optional-dependencies]
torch = ["torch>=2.0.0"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
